# rmosaic

./: .gitignore  Cargo.toml  README.md  generate_colors  png.rb
src/: main.rs
src/lib/: index.rs  mod.rs  params.rs  timing.rs
