[package]
name = "mosaic"
version = "0.1.0"
authors = ["ipost <post.isaac@gmail.com>"]

[dependencies]
image = "*"
md5 = "*"
serde = "*"
serde_derive = "*"
serde_json = "*"

[[bin]]
name = "mosaic"
path = "src/main.rs"

# TODO: parallelize stuff
# TODO: support for more average color points per image
# TODO: gotta make em square
# TODO: filtertype
