[package]
name = "mosaic"
version = "0.1.0"
authors = ["ipost <post.isaac@gmail.com>"]

[dependencies]
image = "*"
clap = "*"
time = "*"
md5 = "*"
serde = "*"
serde_derive = "*"
serde_json = "*"

[[bin]]
name = "mosaic"
path = "src/main.rs"

# TODO: parallelize stuff
# TODO: support for more average color points per image
# TODO: different filtertypes?
# TODO: verbosity flag
# TODO: progress bar
# TODO: different tile shapes?
# TODO: cache closest color matches?
